<resources>
    <string name="app_name">Contact Book</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>

    <string name="action_settings">Settings</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_phone">Add Phone Number</string>
    <string name="add_email">Add Email</string>
    <string name="sort_desc">Descending</string>
    <string name="sort_alphabetical">Alphabetical</string>
    <string name="sort_asc">Ascending</string>
    <string name="update_contact">Update Contact</string>
    <string name="update_phone">Update Phone</string>
    <string name="update_email">Update Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_first_name">Ivan</string>
    <string name="contact_number">+38(050)9124278</string>
    <string name="contact_email">email@gamil.com</string>
    <string name="your_last_name">Petrov</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="contacts">Contacts</string>
    <string name="phones">Phone Numbers</string>
    <string name="emails">Email</string>
</resources>
