<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/etxt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contact_email"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/layout_submit_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_email"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/button_add_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/add" />

            <Button
                android:id="@+id/button_reset_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>